[gd_scene load_steps=20 format=3 uid="uid://ds1hwdmholrjy"]

[ext_resource type="Script" uid="uid://3cdediw7jna7" path="res://codings/initializer.gd" id="1_tesvr"]
[ext_resource type="Texture2D" uid="uid://cvnuw1n43hcfj" path="res://art/Branding/splash.png" id="2_s81ns"]
[ext_resource type="Texture2D" uid="uid://byelv1407kucs" path="res://art/Branding/logo_solid_low.png" id="4_ee01i"]
[ext_resource type="FontFile" uid="uid://bks6fau84dtru" path="res://UI/Fonts/Faktos.ttf" id="5_li13k"]
[ext_resource type="Shader" uid="uid://bpx7sdi81bvy6" path="res://codings/Shaders/Unshaded.gdshader" id="5_ljri5"]
[ext_resource type="FontVariation" uid="uid://b26p56yb7cgso" path="res://UI/Fonts/cyrenia-button.tres" id="6_hsai6"]
[ext_resource type="Texture2D" uid="uid://bpv6vrrg6tboq" path="res://UI/Input/A.png" id="7_811l6"]
[ext_resource type="Texture2D" uid="uid://behkoc7jb5kcx" path="res://UI/Input/+.png" id="8_clvoy"]
[ext_resource type="Texture2D" uid="uid://br72701mwobte" path="res://art/Branding/PrototypeTitle.png" id="9_8unpa"]
[ext_resource type="FontFile" uid="uid://cumufnoi2wx0i" path="res://UI/Fonts/cyrenia-bold.ttf" id="10_a4ygc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nvmut"]
shader = ExtResource("5_ljri5")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xhyn7"]
content_margin_left = 8.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 12
border_width_top = 5
border_width_right = 13
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 26
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 26

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xi51m"]
content_margin_left = 8.0
bg_color = Color(0.894118, 0.894118, 0.894118, 1)
border_width_left = 12
border_width_top = 5
border_width_right = 13
border_width_bottom = 5
border_color = Color(0.894118, 0.894118, 0.894118, 1)
corner_radius_top_left = 26
corner_radius_top_right = 26
corner_radius_bottom_right = 26
corner_radius_bottom_left = 26

[sub_resource type="Theme" id="Theme_t61ta"]
default_font = ExtResource("6_hsai6")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/constants/outline_size = 0
Button/styles/disabled = null
Button/styles/focus = SubResource("StyleBoxFlat_xhyn7")
Button/styles/hover = SubResource("StyleBoxFlat_xi51m")
Button/styles/normal = SubResource("StyleBoxFlat_xhyn7")
Button/styles/pressed = SubResource("StyleBoxFlat_xhyn7")

[sub_resource type="InputEventAction" id="InputEventAction_2em40"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_ts7k6"]
events = [SubResource("InputEventAction_2em40")]

[sub_resource type="InputEventAction" id="InputEventAction_p5u4y"]
action = &"Options"

[sub_resource type="Shortcut" id="Shortcut_wu61f"]
events = [SubResource("InputEventAction_p5u4y")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qngc8"]
bg_color = Color(0.428102, 0.309293, 0.481425, 1)

[node name="Initializer" type="Node"]
process_mode = 3
script = ExtResource("1_tesvr")

[node name="TitleScreen" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="TitleScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0470588, 0.0470588, 0.0470588, 1)

[node name="PrototypeTitle" type="Sprite2D" parent="TitleScreen"]
position = Vector2(406, 472)
scale = Vector2(0.634497, 0.634497)
texture = ExtResource("9_8unpa")

[node name="Logo" type="TextureRect" parent="TitleScreen"]
offset_left = 628.0
offset_top = 31.0
offset_right = 3060.6755
offset_bottom = 1567.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_ee01i")

[node name="Label" type="Label" parent="TitleScreen"]
offset_left = 858.0
offset_top = 714.0
offset_right = 1264.0
offset_bottom = 783.0
theme_override_fonts/font = ExtResource("5_li13k")
theme_override_font_sizes/font_size = 32
text = "Created by Iris
v"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="TitleScreen"]
offset_left = 665.0
offset_top = 396.0
offset_right = 1216.0
offset_bottom = 465.0
theme_override_fonts/font = ExtResource("5_li13k")
theme_override_font_sizes/font_size = 32
text = "Development Build"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="TitleScreen"]
visibility_layer = 1024
material = SubResource("ShaderMaterial_nvmut")
layout_direction = 1
offset_left = 860.0
offset_top = 535.00006
offset_right = 994.0
offset_bottom = 568.00006
scale = Vector2(1.4, 1.4)
pivot_offset = Vector2(19.2536, 14.8241)
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme = SubResource("Theme_t61ta")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
shortcut = SubResource("Shortcut_ts7k6")
shortcut_in_tooltip = false
text = "Continue"
icon = ExtResource("7_811l6")
text_overrun_behavior = 1
expand_icon = true

[node name="Options" type="Button" parent="TitleScreen"]
visibility_layer = 1024
material = SubResource("ShaderMaterial_nvmut")
layout_direction = 1
offset_left = 27.0
offset_top = 739.0
offset_right = 161.0
offset_bottom = 772.0
scale = Vector2(1.4, 1.4)
pivot_offset = Vector2(19.2536, 14.8241)
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme = SubResource("Theme_t61ta")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
shortcut = SubResource("Shortcut_wu61f")
shortcut_in_tooltip = false
text = "Options"
icon = ExtResource("8_clvoy")
expand_icon = true

[node name="Splash" type="TextureRect" parent="TitleScreen"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -645.0
offset_top = -400.0
offset_right = 635.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(1290, 800)
mouse_filter = 2
texture = ExtResource("2_s81ns")

[node name="Error" type="Panel" parent="TitleScreen"]
visible = false
offset_left = -1.0
offset_top = 412.0
offset_right = 1284.0
offset_bottom = 678.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qngc8")

[node name="Label" type="Label" parent="TitleScreen/Error"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_top = 13.0
offset_right = 1285.0
offset_bottom = 196.0
theme_override_fonts/font = ExtResource("10_a4ygc")
theme_override_font_sizes/font_size = 43
text = "Something went very wrong.
The initializing script did not run. 
Or maybe you're seeing this in the editor, Hi!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Hint" type="Label" parent="TitleScreen/Error"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_left = -11.0
offset_top = 198.0
offset_right = 1274.0
offset_bottom = 257.0
theme_override_fonts/font = ExtResource("10_a4ygc")
theme_override_font_sizes/font_size = 32
text = "Hint: Initial"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="TitleScreen/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="TitleScreen/Options" to="." method="_on_options_pressed"]
